# flashcards-app

./: README.md  backup proiect.txt  build_executable.py  flashcard_app.py  flashcard_history.json  install.py  pyproject.toml  requirements.txt  run_flashcard_studio.py  setup.py
